--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "hmr"
   ],
   "devDependencies": {
-    "@babel/core": "^7.9.0",
+    "@babel/core": "^7.9.6",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/preset-env": "^7.9.0",
+    "@babel/preset-env": "^7.9.6",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "bulma": "^0.8.2",
@@ -49,6 +49,7 @@
   "dependencies": {
     "body-scroll-lock": "^3.0.2",
     "bulma-scss": "^0.8.2",
+    "core-js": "^3.6.5",
     "dom-focus-lock": "^1.0.4",
     "swiper": "^5.4.1"
   }
